--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 
+data:
+  author: F:\-- All Projects --\Pustak\test-authors.txt
+  works: F:\-- All Projects --\Pustak\test-works.txt
 
 spring:
   data:
     cassandra:
       keyspace-name: main
-      username: <User-name>
-      password: <secreat>
-      schema-action: create-if-not-exists
+      username: <USERNAME>
+      password: <PASSWORD>
+      schema-action: create-if-not-exists 
       request:
         timeout: 10s
       connection:
@@ -17,8 +20,7 @@ datastax:
   astra:
     secure-connect-bundle: secure-connect-pustak.zip
     db:
-      id: <db-id>
+      id: <id>
       region: asia-south1
       keyspace: main
       applicatio:
-        token: <Token>
